website/websites/gp4/code/spectralnorm-scala-2.log
BUILD COMMANDS FOR: spectralnorm.scala-2.scala

Thu Jan 25 14:09:17 PST 2007

( if [ ! -d spectralnorm.scala-2.scala_run ] ; then mkdir spectralnorm.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/spectralnorm/spectralnorm.scala-2.scala spectralnorm.scala-2.scala_run/spectralnorm.scala
( cd spectralnorm.scala-2.scala_run ; /opt/scala-2.3.2/bin/scalac spectralnorm.scala )
spectralnorm.scala:11: error: value printf is not a member of object scala.Console
      Console.printf("{0,number,0.000000000}\n")( 
             ^
one error found
make[3]: [spectralnorm.scala-2.scala_run] Error 1 (ignored)
touch spectralnorm.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.3.2/bin/scala -classpath spectralnorm.scala-2.scala_run spectralnorm %A
************************************************************
*   TEST (spectralnorm.scala-2.scala_run) FAILED - ERROR:  spectralnorm.scala-2.scala_out differs from Output.500
************************************************************
-rw-r--r-- 1 dunham users 12 Jan  1  2006 Output.500
-rw-r--r-- 1 dunham users 27 Jan 25 14:09 spectralnorm.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: spectralnorm
